<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/selector_home"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/selector_find"
        android:title="@string/title_find"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/selector_message"
        android:title="@string/title_message"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_dynamic"
        android:icon="@drawable/selector_dynamic"
        android:title="@string/title_dynamic"
        app:showAsAction="ifRoom" />

</menu>
