<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_50">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_load_end"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/load_more_end"
        android:visibility="gone"
        android:textColor="@color/color_load_more"
        android:textSize="@dimen/sp_12" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_load_complete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/load_more_complete"
        android:textColor="@color/color_load_more"
        android:textSize="@dimen/sp_12" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_load_fail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/load_more_fail"
        android:textColor="@color/color_load_more"
        android:textSize="@dimen/sp_12" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <fr.castorflex.android.circularprogressbar.CircularProgressBar
            android:id="@+id/cpb_loading"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:indeterminate="true"
            app:cpb_color="@color/colorPrimary"
            app:cpb_max_sweep_angle="300"
            app:cpb_min_sweep_angle="10"
            app:cpb_rotation_speed="1.0"
            app:cpb_stroke_width="@dimen/dp_2"
            app:cpb_sweep_speed="1.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintRight_toLeftOf="@id/tv_loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/cpb_loading"
            android:gravity="center"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/load_more_loading"
            android:textColor="@color/color_load_more"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="@dimen/sp_12" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>