<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginVM"
            type="com.example.basemvvm.mvvm.viewModel.LoginVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar"
            bind:toolbarVM="@{loginVM}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_account"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:layout_marginTop="@dimen/dp_40"
                android:src="@drawable/ic_account_circle"
                android:transitionName="@string/transition_name_unlogin_head"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/iv_account">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_account"
                    style="@style/et_login_mobile_style"
                    android:hint="@string/str_mobile_hint"
                    android:text="@={loginVM.str_mobile}"
                    app:layout_constraintTop_toBottomOf="@id/iv_account"
                    bind:ignore="MissingConstraints"
                    bind:textWatcher="@{loginVM.accountTextWatcher}" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_15"
                app:layout_constraintTop_toBottomOf="@id/til_account">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_verification_code"
                        style="@style/et_login_verification_code_style"
                        android:hint="@string/str_verification_code_hint"
                        android:text="@={loginVM.str_code}"
                        bind:textWatcher="@{loginVM.codeTextWatcher}" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/btn_login_code_style"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:enabled="@{loginVM.btnCodeEnabled}"
                    android:onClick="@{loginVM::getCode}"
                    android:text="@{loginVM.btnCodeText}"
                    app:layout_constraintBottom_toBottomOf="@id/til_code"
                    app:layout_constraintRight_toRightOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btn_login_style"
                android:layout_marginTop="@dimen/dp_10"
                android:enabled="@{loginVM.btnLoginEnabled}"
                android:onClick="@{loginVM::login}"
                android:text="@string/str_login_hint"
                app:layout_constraintTop_toBottomOf="@id/cl_verification_code"
                bind:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</layout>